--- a/hosting90/Makefile.am
+++ b/hosting90/Makefile.am
@@ -30,6 +30,7 @@ halibdir		= $(libexecdir)/heartbeat
 ocfdir		        = $(OCF_RA_DIR_PREFIX)/hosting90
 
 ocf_SCRIPTS	      = dmsetup_error \
+                    DummyContent \
                     haproxy-backend-server \
                     mysql-query \
                     oneshot \
